--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -1,3 +1,10 @@
+@keyframes blink {
+    100% { opacity: 0.7; }
+}
+@-webkit-keyframes blink {
+    100% { opacity: 0.7; }
+}
+
 $pai_width: 30px;
 $pai_height: 42px;
 $pai_width_big: 40px;
@@ -136,7 +143,6 @@ body {
   &__mianzi {
     white-space: nowrap;
     margin-left: 2px;
-    float: right;
   }
 
   &--zijia {
@@ -187,6 +193,18 @@ body {
     width: $pai_width_big;
     height: $pai_height_big;
   }
+
+  &--selected {
+    transform-origin: 0% 0%;
+    transform: translate(0px, -10px);
+    -webkit-transform-origin: 0% 0%;
+    -webkit-transform: translate(0px, -10px);
+  }
+
+  &--dapai {
+    animation: blink 0.5s infinite;
+    -webkit-animation: blink 0.5s infinite;
+  }
 }
 
 .paiWrapZimo {
@@ -223,6 +241,8 @@ body {
     font-size: 16px;
     background: black;
     border-radius: 5px;
+    white-space: nowrap;
+    cursor: pointer;
   }
 }
 
